--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="col-12 text-center" id="myButton">
-                    <button type="button"
-                        class="btn default-bg p-2 px-4 me-4 fw-medium rounded-5 fs-5 active">
+                    <button type="button" class="btn border-1 default-bg p-2 px-4 me-4 fw-medium rounded-5 fs-5 active">
                         default
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -32,8 +31,7 @@
                             </svg>
                         </span>
                     </button>
-                    <button type="button"
-                        class="btn p-2 px-4 me-4 fs-5 fw-medium rounded-5 icon-primary">
+                    <button type="button " class="btn p-2 px-4 me-4 fs-5 fw-medium rounded-5 border-primary">
                         primary
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -43,7 +41,7 @@
                             </svg>
                         </span>
                     </button>
-                    <button type="button" class="btn border-1 border-success p-2 px-4 me-4 fw-medium rounded-5 fs-5">
+                    <button type="button" class="btn border-success p-2 px-4 me-4 fw-medium rounded-5 fs-5">
                         success
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
