--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
     </nav>
     <!-- navbar -->
 
-    <!-- card -->
+    <!-- section -->
     <section class="pt-5 py-5">
         <div class="container">
             <div class="row">
                 <div class="col-12 d-flex justify-content-center gap-5">
                     <!-- help center -->
-                    <div class="card text-center py-2 rounded-5 shadow-sm mb-5">
+                    <div class="card text-center py-2 rounded-5 shadow-sm mb-5 active">
                         <div class="card-body">
                             <h3 class="card-title m-0">
                                 Our Services
@@ -94,7 +94,7 @@
                                     xmlns:xlink="http://www.w3.org/1999/xlink">
                                     <path
                                         d="M593.26357,266.136h-3.54069V169.13919A56.13918,56.13918,0,0,0,533.58377,113H328.0828a56.13913,56.13913,0,0,0-56.13933,56.13893v532.1324a56.13909,56.13909,0,0,0,56.13905,56.13917h205.501a56.13914,56.13914,0,0,0,56.13933-56.13895V335.18h3.54069Z"
-                                        transform="translate(-171.93898 -113)" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)"></path>
                                     <path
                                         d="M535.426,128.93322H508.60134A19.918,19.918,0,0,1,490.16,156.37379H372.4311a19.91806,19.91806,0,0,1-18.44139-27.44057H328.93542a41.92409,41.92409,0,0,0-41.92413,41.924V702.20874a41.92407,41.92407,0,0,0,41.92408,41.92408H535.426a41.92411,41.92411,0,0,0,41.92414-41.924V170.8573a41.92407,41.92407,0,0,0-41.92408-41.92408Zm-4.50666,246.49737a10.8911,10.8911,0,0,1-10.8592,10.8592H467.574a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89111,10.89111,0,0,1,10.8592-10.8592h52.48612a10.89115,10.89115,0,0,1,10.8592,10.8592Zm5.88207-47.96146a10.89111,10.89111,0,0,1-10.8592,10.8592H337.7161a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89112,10.89112,0,0,1,10.8592-10.8592H525.94221a10.89116,10.89116,0,0,1,10.8592,10.8592Zm0-47.96146a10.89111,10.89111,0,0,1-10.8592,10.8592H337.7161a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89112,10.89112,0,0,1,10.8592-10.8592H525.94221a10.89116,10.89116,0,0,1,10.8592,10.8592Zm0-47.96146a10.8911,10.8911,0,0,1-10.8592,10.8592H337.7161a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89111,10.89111,0,0,1,10.8592-10.8592H525.94221a10.89116,10.89116,0,0,1,10.8592,10.8592Z"
                                         transform="translate(-171.93898 -113)" fill="#fff"></path>
@@ -107,7 +107,7 @@
                                     <circle cx="341.78664" cy="261.52569" r="6.33453" fill="#fff"></circle>
                                     <path
                                         d="M538.25762,456.6012H323.5908a19.01566,19.01566,0,0,0-19.01568,19.01563v104.59a19.01571,19.01571,0,0,0,19.01566,19.01571H538.25762a19.0157,19.0157,0,0,0,19.0157-19.01565V475.61688a19.01566,19.01566,0,0,0-19.0156-19.01568Zm-219.978,12.97163c.42392-.07665,10.47581-1.78725,18.79934,3.22117,8.323,5.00748,11.52088,14.6906,11.65264,15.1l.33649,1.04412-1.0801.19161a28.669,28.669,0,0,1-4.65836.34214,27.73763,27.73763,0,0,1-14.14144-3.56421c-8.323-5.00653-11.52041-14.6897-11.65221-15.09912l-.33651-1.04411Zm46.59851,97.10524H326.59051a10.52909,10.52909,0,0,1,0-21.05818h38.28762a10.52909,10.52909,0,0,1,0,21.05818Zm174.2086-1.91436A11.5201,11.5201,0,0,1,527.60041,576.25H498.88473a11.5201,11.5201,0,0,1-11.48627-11.48627V547.53425A11.52,11.52,0,0,1,498.88473,536.048h28.71568a11.52,11.52,0,0,1,11.48627,11.48627Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill" ></path>
                                     <path
                                         d="M508.14328,561.21324H496.5975a3.10848,3.10848,0,0,0,0,6.217h11.54578a3.10849,3.10849,0,0,0,0-6.217Z"
                                         transform="translate(-171.93898 -113)" fill="#3f3d56"></path>
@@ -153,13 +153,13 @@
                                     <circle cx="670.5842" cy="315.75634" r="24.56103" fill="#ffb8b8"></circle>
                                     <path
                                         d="M879.59694,599.25244H805.55006l.08911-.57617c.13306-.86133,13.19678-86.439,3.56177-114.436a11.813,11.813,0,0,1,6.06934-14.58349h.00024c13.77173-6.48535,40.20752-14.47119,62.52,4.90918a28.23446,28.23446,0,0,1,9.45947,23.396Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M819.77174,524.88428l-33.33667-6.76319,15.62622-37.02978a13.99723,13.99723,0,0,1,27.10571,6.99756Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M862.46778,537.44189l-2.00415-45.9414c-1.51977-8.63623,3.42408-16.80029,11.02735-18.13477,7.60547-1.32959,15.03174,4.66016,16.55835,13.35987l7.533,42.92773Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M877.13341,593.75241c11.91455,45.37671,13.21436,103.06939,10,166l-16-2-29-120-16,122-18-1c-5.37744-66.02973-10.61328-122.71527-2-160Z"
                                         transform="translate(-171.93898 -113)" fill="#2f2e41"></path>
@@ -182,7 +182,7 @@
                                     <span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 24 24">
-                                            <path fill="currentColor"
+                                            <path fill="#fff"
                                                 d="m14 18l-1.4-1.45L16.15 13H4v-2h12.15L12.6 7.45L14 6l6 6l-6 6Z" />
                                         </svg>
                                     </span>
@@ -203,7 +203,7 @@
                                     xmlns:xlink="http://www.w3.org/1999/xlink">
                                     <path
                                         d="M593.26357,266.136h-3.54069V169.13919A56.13918,56.13918,0,0,0,533.58377,113H328.0828a56.13913,56.13913,0,0,0-56.13933,56.13893v532.1324a56.13909,56.13909,0,0,0,56.13905,56.13917h205.501a56.13914,56.13914,0,0,0,56.13933-56.13895V335.18h3.54069Z"
-                                        transform="translate(-171.93898 -113)" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)"></path>
                                     <path
                                         d="M535.426,128.93322H508.60134A19.918,19.918,0,0,1,490.16,156.37379H372.4311a19.91806,19.91806,0,0,1-18.44139-27.44057H328.93542a41.92409,41.92409,0,0,0-41.92413,41.924V702.20874a41.92407,41.92407,0,0,0,41.92408,41.92408H535.426a41.92411,41.92411,0,0,0,41.92414-41.924V170.8573a41.92407,41.92407,0,0,0-41.92408-41.92408Zm-4.50666,246.49737a10.8911,10.8911,0,0,1-10.8592,10.8592H467.574a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89111,10.89111,0,0,1,10.8592-10.8592h52.48612a10.89115,10.89115,0,0,1,10.8592,10.8592Zm5.88207-47.96146a10.89111,10.89111,0,0,1-10.8592,10.8592H337.7161a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89112,10.89112,0,0,1,10.8592-10.8592H525.94221a10.89116,10.89116,0,0,1,10.8592,10.8592Zm0-47.96146a10.89111,10.89111,0,0,1-10.8592,10.8592H337.7161a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89112,10.89112,0,0,1,10.8592-10.8592H525.94221a10.89116,10.89116,0,0,1,10.8592,10.8592Zm0-47.96146a10.8911,10.8911,0,0,1-10.8592,10.8592H337.7161a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89111,10.89111,0,0,1,10.8592-10.8592H525.94221a10.89116,10.89116,0,0,1,10.8592,10.8592Z"
                                         transform="translate(-171.93898 -113)" fill="#fff"></path>
@@ -216,7 +216,7 @@
                                     <circle cx="341.78664" cy="261.52569" r="6.33453" fill="#fff"></circle>
                                     <path
                                         d="M538.25762,456.6012H323.5908a19.01566,19.01566,0,0,0-19.01568,19.01563v104.59a19.01571,19.01571,0,0,0,19.01566,19.01571H538.25762a19.0157,19.0157,0,0,0,19.0157-19.01565V475.61688a19.01566,19.01566,0,0,0-19.0156-19.01568Zm-219.978,12.97163c.42392-.07665,10.47581-1.78725,18.79934,3.22117,8.323,5.00748,11.52088,14.6906,11.65264,15.1l.33649,1.04412-1.0801.19161a28.669,28.669,0,0,1-4.65836.34214,27.73763,27.73763,0,0,1-14.14144-3.56421c-8.323-5.00653-11.52041-14.6897-11.65221-15.09912l-.33651-1.04411Zm46.59851,97.10524H326.59051a10.52909,10.52909,0,0,1,0-21.05818h38.28762a10.52909,10.52909,0,0,1,0,21.05818Zm174.2086-1.91436A11.5201,11.5201,0,0,1,527.60041,576.25H498.88473a11.5201,11.5201,0,0,1-11.48627-11.48627V547.53425A11.52,11.52,0,0,1,498.88473,536.048h28.71568a11.52,11.52,0,0,1,11.48627,11.48627Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M508.14328,561.21324H496.5975a3.10848,3.10848,0,0,0,0,6.217h11.54578a3.10849,3.10849,0,0,0,0-6.217Z"
                                         transform="translate(-171.93898 -113)" fill="#3f3d56"></path>
@@ -262,13 +262,13 @@
                                     <circle cx="670.5842" cy="315.75634" r="24.56103" fill="#ffb8b8"></circle>
                                     <path
                                         d="M879.59694,599.25244H805.55006l.08911-.57617c.13306-.86133,13.19678-86.439,3.56177-114.436a11.813,11.813,0,0,1,6.06934-14.58349h.00024c13.77173-6.48535,40.20752-14.47119,62.52,4.90918a28.23446,28.23446,0,0,1,9.45947,23.396Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M819.77174,524.88428l-33.33667-6.76319,15.62622-37.02978a13.99723,13.99723,0,0,1,27.10571,6.99756Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M862.46778,537.44189l-2.00415-45.9414c-1.51977-8.63623,3.42408-16.80029,11.02735-18.13477,7.60547-1.32959,15.03174,4.66016,16.55835,13.35987l7.533,42.92773Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M877.13341,593.75241c11.91455,45.37671,13.21436,103.06939,10,166l-16-2-29-120-16,122-18-1c-5.37744-66.02973-10.61328-122.71527-2-160Z"
                                         transform="translate(-171.93898 -113)" fill="#2f2e41"></path>
@@ -291,7 +291,7 @@
                                     <span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 24 24">
-                                            <path fill="currentColor"
+                                            <path fill="#fff"
                                                 d="m14 18l-1.4-1.45L16.15 13H4v-2h12.15L12.6 7.45L14 6l6 6l-6 6Z" />
                                         </svg>
                                     </span>
@@ -312,7 +312,7 @@
                                     xmlns:xlink="http://www.w3.org/1999/xlink">
                                     <path
                                         d="M593.26357,266.136h-3.54069V169.13919A56.13918,56.13918,0,0,0,533.58377,113H328.0828a56.13913,56.13913,0,0,0-56.13933,56.13893v532.1324a56.13909,56.13909,0,0,0,56.13905,56.13917h205.501a56.13914,56.13914,0,0,0,56.13933-56.13895V335.18h3.54069Z"
-                                        transform="translate(-171.93898 -113)" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)"></path>
                                     <path
                                         d="M535.426,128.93322H508.60134A19.918,19.918,0,0,1,490.16,156.37379H372.4311a19.91806,19.91806,0,0,1-18.44139-27.44057H328.93542a41.92409,41.92409,0,0,0-41.92413,41.924V702.20874a41.92407,41.92407,0,0,0,41.92408,41.92408H535.426a41.92411,41.92411,0,0,0,41.92414-41.924V170.8573a41.92407,41.92407,0,0,0-41.92408-41.92408Zm-4.50666,246.49737a10.8911,10.8911,0,0,1-10.8592,10.8592H467.574a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89111,10.89111,0,0,1,10.8592-10.8592h52.48612a10.89115,10.89115,0,0,1,10.8592,10.8592Zm5.88207-47.96146a10.89111,10.89111,0,0,1-10.8592,10.8592H337.7161a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89112,10.89112,0,0,1,10.8592-10.8592H525.94221a10.89116,10.89116,0,0,1,10.8592,10.8592Zm0-47.96146a10.89111,10.89111,0,0,1-10.8592,10.8592H337.7161a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89112,10.89112,0,0,1,10.8592-10.8592H525.94221a10.89116,10.89116,0,0,1,10.8592,10.8592Zm0-47.96146a10.8911,10.8911,0,0,1-10.8592,10.8592H337.7161a10.89109,10.89109,0,0,1-10.8592-10.8592v-2.7148a10.89111,10.89111,0,0,1,10.8592-10.8592H525.94221a10.89116,10.89116,0,0,1,10.8592,10.8592Z"
                                         transform="translate(-171.93898 -113)" fill="#fff"></path>
@@ -325,7 +325,7 @@
                                     <circle cx="341.78664" cy="261.52569" r="6.33453" fill="#fff"></circle>
                                     <path
                                         d="M538.25762,456.6012H323.5908a19.01566,19.01566,0,0,0-19.01568,19.01563v104.59a19.01571,19.01571,0,0,0,19.01566,19.01571H538.25762a19.0157,19.0157,0,0,0,19.0157-19.01565V475.61688a19.01566,19.01566,0,0,0-19.0156-19.01568Zm-219.978,12.97163c.42392-.07665,10.47581-1.78725,18.79934,3.22117,8.323,5.00748,11.52088,14.6906,11.65264,15.1l.33649,1.04412-1.0801.19161a28.669,28.669,0,0,1-4.65836.34214,27.73763,27.73763,0,0,1-14.14144-3.56421c-8.323-5.00653-11.52041-14.6897-11.65221-15.09912l-.33651-1.04411Zm46.59851,97.10524H326.59051a10.52909,10.52909,0,0,1,0-21.05818h38.28762a10.52909,10.52909,0,0,1,0,21.05818Zm174.2086-1.91436A11.5201,11.5201,0,0,1,527.60041,576.25H498.88473a11.5201,11.5201,0,0,1-11.48627-11.48627V547.53425A11.52,11.52,0,0,1,498.88473,536.048h28.71568a11.52,11.52,0,0,1,11.48627,11.48627Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M508.14328,561.21324H496.5975a3.10848,3.10848,0,0,0,0,6.217h11.54578a3.10849,3.10849,0,0,0,0-6.217Z"
                                         transform="translate(-171.93898 -113)" fill="#3f3d56"></path>
@@ -371,13 +371,13 @@
                                     <circle cx="670.5842" cy="315.75634" r="24.56103" fill="#ffb8b8"></circle>
                                     <path
                                         d="M879.59694,599.25244H805.55006l.08911-.57617c.13306-.86133,13.19678-86.439,3.56177-114.436a11.813,11.813,0,0,1,6.06934-14.58349h.00024c13.77173-6.48535,40.20752-14.47119,62.52,4.90918a28.23446,28.23446,0,0,1,9.45947,23.396Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M819.77174,524.88428l-33.33667-6.76319,15.62622-37.02978a13.99723,13.99723,0,0,1,27.10571,6.99756Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M862.46778,537.44189l-2.00415-45.9414c-1.51977-8.63623,3.42408-16.80029,11.02735-18.13477,7.60547-1.32959,15.03174,4.66016,16.55835,13.35987l7.533,42.92773Z"
-                                        transform="translate(-171.93898 -113)" class="svg-fill" fill="#08333f"></path>
+                                        transform="translate(-171.93898 -113)" class="svg-fill"></path>
                                     <path
                                         d="M877.13341,593.75241c11.91455,45.37671,13.21436,103.06939,10,166l-16-2-29-120-16,122-18-1c-5.37744-66.02973-10.61328-122.71527-2-160Z"
                                         transform="translate(-171.93898 -113)" fill="#2f2e41"></path>
@@ -400,7 +400,7 @@
                                     <span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 24 24">
-                                            <path fill="currentColor"
+                                            <path fill="#fff"
                                                 d="m14 18l-1.4-1.45L16.15 13H4v-2h12.15L12.6 7.45L14 6l6 6l-6 6Z" />
                                         </svg>
                                     </span>
@@ -414,7 +414,8 @@
             </div>
         </div>
     </section>
-
+    <!-- /section -->
+    
     <!-- bootstrap js -->
     <script src="./js/bootstrap.bundle.min.js"></script>
     <!-- js -->
