--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="col-12 text-center">
                     <button type="button"
-                        class="btn border-1 p-2 px-4 me-4 fw-medium rounded-5 fs-5 default default-bg active">default<span><svg 
-                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="btn border-1 p-2 px-4 me-4 fw-medium rounded-5 fs-5 default default-bg active">default<span><svg
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-check" viewBox="0 0 16 16">
                                 <path
                                     d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
@@ -39,23 +39,25 @@
                                     d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
                             </svg>
                         </span></button>
-                    <button type="button" class="btn p-2 px-4 me-4 fw-medium rounded-5 fs-5 success default-success">success<span><svg 
-                        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    <button type="button"
+                        class="btn p-2 px-4 me-4 fw-medium rounded-5 fs-5 success default-success">success<span><svg
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-check" viewBox="0 0 16 16">
                                 <path
                                     d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
                             </svg>
                         </span></button>
                     <button type="button"
-                        class="btn border-1 p-2 px-4 me-4 fw-medium rounded-5 fs-5 danger default-danger">danger<span><svg 
-                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="btn border-1 p-2 px-4 me-4 fw-medium rounded-5 fs-5 danger default-danger">danger<span><svg
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-check" viewBox="0 0 16 16">
                                 <path
                                     d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
                             </svg>
                         </span></button>
-                    <button type="button" class="btn border-1 p-2 px-4 me-4 fw-medium rounded-5 fs-5 info default-info">info<span><svg 
-                        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    <button type="button"
+                        class="btn border-1 p-2 px-4 me-4 fw-medium rounded-5 fs-5 info default-info">info<span><svg
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-check" viewBox="0 0 16 16">
                                 <path
                                     d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
@@ -287,7 +289,7 @@
                     <div class="card text-center py-2 rounded-5 mt-3 shadow-sm mb-4">
                         <div class="card-body">
                             <h3 class="card-title m-0">
-                                Our Services
+                                Our Services Add to
                             </h3>
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" class="px-5 py-5"
